# Generated by Django 5.2.12 on 2026-03-25 00:39

import core.models
import django.contrib.auth.models
import django.contrib.auth.validators
import django.db.models.deletion
import django.utils.timezone
from django.conf import settings
from django.db import migrations, models


class Migration(migrations.Migration):

    initial = True

    dependencies = [
        ('auth', '0012_alter_user_first_name_max_length'),
    ]

    operations = [
        migrations.CreateModel(
            name='User',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('password', models.CharField(max_length=128, verbose_name='password')),
                ('last_login', models.DateTimeField(blank=True, null=True, verbose_name='last login')),
                ('is_superuser', models.BooleanField(default=False, help_text='Designates that this user has all permissions without explicitly assigning them.', verbose_name='superuser status')),
                ('username', models.CharField(error_messages={'unique': 'A user with that username already exists.'}, help_text='Required. 150 characters or fewer. Letters, digits and @/./+/-/_ only.', max_length=150, unique=True, validators=[django.contrib.auth.validators.UnicodeUsernameValidator()], verbose_name='username')),
                ('first_name', models.CharField(blank=True, max_length=150, verbose_name='first name')),
                ('last_name', models.CharField(blank=True, max_length=150, verbose_name='last name')),
                ('email', models.EmailField(blank=True, max_length=254, verbose_name='email address')),
                ('is_staff', models.BooleanField(default=False, help_text='Designates whether the user can log into this admin site.', verbose_name='staff status')),
                ('is_active', models.BooleanField(default=True, help_text='Designates whether this user should be treated as active. Unselect this instead of deleting accounts.', verbose_name='active')),
                ('date_joined', models.DateTimeField(default=django.utils.timezone.now, verbose_name='date joined')),
                ('profile', models.CharField(choices=[('AGENT', 'Agente / First Responder'), ('EXPERT', 'Perito Forense Digital')], default='AGENT', help_text='Define as permissões e vistas disponíveis.', max_length=10, verbose_name='Perfil')),
                ('badge_number', models.CharField(blank=True, default='', max_length=20, verbose_name='Número de identificação / crachá')),
                ('phone', models.CharField(blank=True, default='', max_length=20, verbose_name='Telefone de contacto')),
                ('groups', models.ManyToManyField(blank=True, help_text='The groups this user belongs to. A user will get all permissions granted to each of their groups.', related_name='user_set', related_query_name='user', to='auth.group', verbose_name='groups')),
                ('user_permissions', models.ManyToManyField(blank=True, help_text='Specific permissions for this user.', related_name='user_set', related_query_name='user', to='auth.permission', verbose_name='user permissions')),
            ],
            options={
                'verbose_name': 'Utilizador',
                'verbose_name_plural': 'Utilizadores',
                'ordering': ['username'],
            },
            managers=[
                ('objects', django.contrib.auth.models.UserManager()),
            ],
        ),
        migrations.CreateModel(
            name='Evidence',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('type', models.CharField(choices=[('DIGITAL_DEVICE', 'Dispositivo Digital'), ('DOCUMENT', 'Documento'), ('STORAGE_MEDIA', 'Suporte de Armazenamento'), ('PHOTO', 'Fotografia'), ('OTHER', 'Outro')], max_length=20, verbose_name='Tipo de evidência')),
                ('description', models.TextField(verbose_name='Descrição')),
                ('photo', models.ImageField(blank=True, null=True, upload_to=core.models.evidence_photo_path, verbose_name='Fotografia da evidência')),
                ('gps_lat', models.DecimalField(blank=True, decimal_places=7, max_digits=10, null=True, verbose_name='Latitude GPS (apreensão)')),
                ('gps_lon', models.DecimalField(blank=True, decimal_places=7, max_digits=10, null=True, verbose_name='Longitude GPS (apreensão)')),
                ('timestamp_seizure', models.DateTimeField(default=django.utils.timezone.now, verbose_name='Data/hora da apreensão')),
                ('serial_number', models.CharField(blank=True, default='', max_length=100, verbose_name='Número de série')),
                ('integrity_hash', models.CharField(blank=True, default='', help_text='Calculado automaticamente no momento do registo.', max_length=64, verbose_name='Hash SHA-256 (integridade)')),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('updated_at', models.DateTimeField(auto_now=True)),
                ('agent', models.ForeignKey(on_delete=django.db.models.deletion.PROTECT, related_name='evidences', to=settings.AUTH_USER_MODEL, verbose_name='Agente que apreendeu')),
            ],
            options={
                'verbose_name': 'Evidência',
                'verbose_name_plural': 'Evidências',
                'ordering': ['-timestamp_seizure'],
            },
        ),
        migrations.CreateModel(
            name='DigitalDevice',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('type', models.CharField(choices=[('SMARTPHONE', 'Smartphone'), ('TABLET', 'Tablet'), ('LAPTOP', 'Computador Portátil'), ('DESKTOP', 'Computador de Secretária'), ('USB_DRIVE', 'Pen USB'), ('HARD_DRIVE', 'Disco Rígido'), ('SIM_CARD', 'Cartão SIM'), ('SD_CARD', 'Cartão SD'), ('CAMERA', 'Câmara'), ('DRONE', 'Drone'), ('OTHER', 'Outro')], max_length=20, verbose_name='Tipo de dispositivo')),
                ('brand', models.CharField(blank=True, default='', max_length=100, verbose_name='Marca')),
                ('model', models.CharField(blank=True, default='', max_length=100, verbose_name='Modelo')),
                ('condition', models.CharField(choices=[('FUNCTIONAL', 'Funcional'), ('DAMAGED', 'Danificado'), ('LOCKED', 'Bloqueado'), ('OFF', 'Desligado'), ('UNKNOWN', 'Desconhecido')], default='UNKNOWN', max_length=20, verbose_name='Estado do dispositivo')),
                ('imei', models.CharField(blank=True, default='', help_text='International Mobile Equipment Identity (15 dígitos).', max_length=20, verbose_name='IMEI')),
                ('serial_number', models.CharField(blank=True, default='', max_length=100, verbose_name='Número de série')),
                ('notes', models.TextField(blank=True, default='', verbose_name='Observações')),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('evidence', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='digital_devices', to='core.evidence', verbose_name='Evidência associada')),
            ],
            options={
                'verbose_name': 'Dispositivo Digital',
                'verbose_name_plural': 'Dispositivos Digitais',
                'ordering': ['-created_at'],
            },
        ),
        migrations.CreateModel(
            name='ChainOfCustody',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('previous_state', models.CharField(blank=True, choices=[('APREENDIDA', 'Apreendida'), ('EM_TRANSPORTE', 'Em Transporte'), ('RECEBIDA_LABORATORIO', 'Recebida no Laboratório'), ('EM_PERICIA', 'Em Perícia'), ('CONCLUIDA', 'Concluída'), ('DEVOLVIDA', 'Devolvida'), ('DESTRUIDA', 'Destruída')], default='', max_length=25, verbose_name='Estado anterior')),
                ('new_state', models.CharField(choices=[('APREENDIDA', 'Apreendida'), ('EM_TRANSPORTE', 'Em Transporte'), ('RECEBIDA_LABORATORIO', 'Recebida no Laboratório'), ('EM_PERICIA', 'Em Perícia'), ('CONCLUIDA', 'Concluída'), ('DEVOLVIDA', 'Devolvida'), ('DESTRUIDA', 'Destruída')], max_length=25, verbose_name='Novo estado')),
                ('timestamp', models.DateTimeField(default=django.utils.timezone.now, verbose_name='Data/hora da transição')),
                ('observations', models.TextField(blank=True, default='', verbose_name='Observações')),
                ('record_hash', models.CharField(blank=True, default='', help_text='Hash que encadeia com o registo anterior (integridade).', max_length=64, verbose_name='Hash SHA-256 do registo')),
                ('agent', models.ForeignKey(on_delete=django.db.models.deletion.PROTECT, related_name='custody_actions', to=settings.AUTH_USER_MODEL, verbose_name='Responsável pela transição')),
                ('evidence', models.ForeignKey(on_delete=django.db.models.deletion.PROTECT, related_name='custody_chain', to='core.evidence', verbose_name='Evidência')),
            ],
            options={
                'verbose_name': 'Registo de Custódia',
                'verbose_name_plural': 'Registos de Custódia',
                'ordering': ['evidence', 'timestamp'],
            },
        ),
        migrations.CreateModel(
            name='Occurrence',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('number', models.CharField(help_text='Identificador único (ex.: NUIPC ou referência interna).', max_length=50, unique=True, verbose_name='Número da ocorrência')),
                ('description', models.TextField(help_text='Descrição sumária da ocorrência.', verbose_name='Descrição')),
                ('date_time', models.DateTimeField(default=django.utils.timezone.now, verbose_name='Data/hora da ocorrência')),
                ('gps_lat', models.DecimalField(blank=True, decimal_places=7, max_digits=10, null=True, verbose_name='Latitude GPS')),
                ('gps_lon', models.DecimalField(blank=True, decimal_places=7, max_digits=10, null=True, verbose_name='Longitude GPS')),
                ('address', models.CharField(blank=True, default='', max_length=255, verbose_name='Morada aproximada')),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('updated_at', models.DateTimeField(auto_now=True)),
                ('agent', models.ForeignKey(on_delete=django.db.models.deletion.PROTECT, related_name='occurrences', to=settings.AUTH_USER_MODEL, verbose_name='Agente responsável')),
            ],
            options={
                'verbose_name': 'Ocorrência',
                'verbose_name_plural': 'Ocorrências',
                'ordering': ['-date_time'],
            },
        ),
        migrations.AddField(
            model_name='evidence',
            name='occurrence',
            field=models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='evidences', to='core.occurrence', verbose_name='Ocorrência'),
        ),
    ]
