# Generated by Django 5.2.13 on 2026-04-12 20:37

import django.core.validators
import django.db.models.deletion
from django.conf import settings
from django.db import migrations, models


class Migration(migrations.Migration):

    dependencies = [
        ('core', '0002_add_immutability_triggers'),
    ]

    operations = [
        migrations.AlterField(
            model_name='digitaldevice',
            name='evidence',
            field=models.ForeignKey(on_delete=django.db.models.deletion.PROTECT, related_name='digital_devices', to='core.evidence', verbose_name='Evidência associada'),
        ),
        migrations.AlterField(
            model_name='digitaldevice',
            name='imei',
            field=models.CharField(blank=True, default='', help_text='International Mobile Equipment Identity (15 dígitos).', max_length=20, validators=[django.core.validators.RegexValidator(message='IMEI deve conter exactamente 15 dígitos.', regex='^(\\d{15})?$')], verbose_name='IMEI'),
        ),
        migrations.AlterField(
            model_name='evidence',
            name='gps_lat',
            field=models.DecimalField(blank=True, decimal_places=7, max_digits=10, null=True, validators=[django.core.validators.MinValueValidator(-90), django.core.validators.MaxValueValidator(90)], verbose_name='Latitude GPS (apreensão)'),
        ),
        migrations.AlterField(
            model_name='evidence',
            name='gps_lon',
            field=models.DecimalField(blank=True, decimal_places=7, max_digits=10, null=True, validators=[django.core.validators.MinValueValidator(-180), django.core.validators.MaxValueValidator(180)], verbose_name='Longitude GPS (apreensão)'),
        ),
        migrations.AlterField(
            model_name='evidence',
            name='occurrence',
            field=models.ForeignKey(on_delete=django.db.models.deletion.PROTECT, related_name='evidences', to='core.occurrence', verbose_name='Ocorrência'),
        ),
        migrations.AlterField(
            model_name='occurrence',
            name='gps_lat',
            field=models.DecimalField(blank=True, decimal_places=7, max_digits=10, null=True, validators=[django.core.validators.MinValueValidator(-90), django.core.validators.MaxValueValidator(90)], verbose_name='Latitude GPS'),
        ),
        migrations.AlterField(
            model_name='occurrence',
            name='gps_lon',
            field=models.DecimalField(blank=True, decimal_places=7, max_digits=10, null=True, validators=[django.core.validators.MinValueValidator(-180), django.core.validators.MaxValueValidator(180)], verbose_name='Longitude GPS'),
        ),
        migrations.CreateModel(
            name='AuditLog',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('action', models.CharField(choices=[('VIEW', 'Visualização'), ('CREATE', 'Criação'), ('EXPORT_PDF', 'Exportação PDF')], db_index=True, help_text='VIEW: visualização; CREATE: criação; EXPORT_PDF: exportação.', max_length=20, verbose_name='Ação')),
                ('resource_type', models.CharField(choices=[('OCCURRENCE', 'Ocorrência'), ('EVIDENCE', 'Evidência'), ('DEVICE', 'Dispositivo Digital'), ('CUSTODY', 'Cadeia de Custódia')], db_index=True, help_text='OCCURRENCE, EVIDENCE, DEVICE, CUSTODY.', max_length=20, verbose_name='Tipo de Recurso')),
                ('resource_id', models.IntegerField(db_index=True, help_text='Chave primária do recurso acedido.', verbose_name='ID do Recurso')),
                ('ip_address', models.GenericIPAddressField(help_text='IPv4 ou IPv6 do cliente (extraído de X-Forwarded-For ou REMOTE_ADDR).', verbose_name='Endereço IP')),
                ('correlation_id', models.CharField(blank=True, db_index=True, default='', help_text='UUID da requisição para rastreamento entre logs.', max_length=36, verbose_name='ID de Correlação')),
                ('timestamp', models.DateTimeField(auto_now_add=True, db_index=True, help_text='Momento exato do acesso (UTC, auto-preenchido).', verbose_name='Timestamp')),
                ('details', models.JSONField(blank=True, default=dict, help_text='Contexto adicional: hash, tamanho, metadados, etc.', verbose_name='Detalhes')),
                ('user', models.ForeignKey(blank=True, help_text='Utilizador que efetuou a ação (nulo para anónimos).', null=True, on_delete=django.db.models.deletion.SET_NULL, to=settings.AUTH_USER_MODEL, verbose_name='Utilizador')),
            ],
            options={
                'verbose_name': 'Registo de Auditoria',
                'verbose_name_plural': 'Registos de Auditoria',
                'ordering': ['-timestamp'],
                'indexes': [models.Index(fields=['user', '-timestamp'], name='core_auditl_user_id_2a1528_idx'), models.Index(fields=['action', '-timestamp'], name='core_auditl_action_f07419_idx'), models.Index(fields=['resource_type', 'resource_id', '-timestamp'], name='core_auditl_resourc_a6f6b9_idx'), models.Index(fields=['correlation_id'], name='core_auditl_correla_cabc5b_idx')],
            },
        ),
    ]
