# Generated by Django 6.0.5 on 2026-05-30 15:09

import django.db.models.deletion
from django.db import migrations, models


class Migration(migrations.Migration):

    dependencies = [
        ('core', '0018_rename_gps_lon_gps_lng'),
    ]

    operations = [
        migrations.CreateModel(
            name='CrimeCategoria',
            fields=[
                (
                    'id',
                    models.BigAutoField(
                        auto_created=True, primary_key=True, serialize=False, verbose_name='ID'
                    ),
                ),
                (
                    'codigo',
                    models.PositiveSmallIntegerField(
                        help_text='Código oficial da categoria (não contíguo: {1..6, 10}).',
                        unique=True,
                        verbose_name='Código N1',
                    ),
                ),
                ('nome', models.CharField(max_length=255, verbose_name='Categoria')),
            ],
            options={
                'verbose_name': 'Categoria de crime (N1)',
                'verbose_name_plural': 'Categorias de crime (N1)',
                'ordering': ['codigo'],
            },
        ),
        migrations.CreateModel(
            name='PoliticaCriminalPrioridade',
            fields=[
                (
                    'id',
                    models.BigAutoField(
                        auto_created=True, primary_key=True, serialize=False, verbose_name='ID'
                    ),
                ),
                ('lei', models.CharField(max_length=120, verbose_name='Lei')),
                ('biennium', models.CharField(max_length=20, verbose_name='Biénio')),
                ('vigente_desde', models.DateField(verbose_name='Vigente desde')),
                (
                    'vigente_ate',
                    models.DateField(blank=True, null=True, verbose_name='Vigente até'),
                ),
                ('is_active', models.BooleanField(default=False, verbose_name='Activa')),
            ],
            options={
                'verbose_name': 'Política criminal (prioridade)',
                'verbose_name_plural': 'Políticas criminais (prioridade)',
                'ordering': ['-vigente_desde'],
            },
        ),
        migrations.AddField(
            model_name='occurrence',
            name='priority',
            field=models.CharField(
                choices=[('PRIORITARIA', 'Prioritária'), ('NORMAL', 'Normal')],
                default='NORMAL',
                help_text='Derivada da Política Criminal na criação (ADR-0014).',
                max_length=12,
                verbose_name='Prioridade',
            ),
        ),
        migrations.AddField(
            model_name='occurrence',
            name='priority_source',
            field=models.CharField(
                choices=[('LEI', 'Derivada da lei'), ('MANUAL', 'Override manual')],
                default='LEI',
                max_length=6,
                verbose_name='Origem da prioridade',
            ),
        ),
        migrations.CreateModel(
            name='CrimeSubcategoria',
            fields=[
                (
                    'id',
                    models.BigAutoField(
                        auto_created=True, primary_key=True, serialize=False, verbose_name='ID'
                    ),
                ),
                ('codigo', models.PositiveSmallIntegerField(verbose_name='Código N2')),
                ('nome', models.CharField(max_length=255, verbose_name='Subcategoria')),
                (
                    'categoria',
                    models.ForeignKey(
                        on_delete=django.db.models.deletion.PROTECT,
                        related_name='subcategorias',
                        to='core.crimecategoria',
                        verbose_name='Categoria (N1)',
                    ),
                ),
            ],
            options={
                'verbose_name': 'Subcategoria de crime (N2)',
                'verbose_name_plural': 'Subcategorias de crime (N2)',
                'ordering': ['codigo'],
            },
        ),
        migrations.CreateModel(
            name='CrimeTipo',
            fields=[
                (
                    'id',
                    models.BigAutoField(
                        auto_created=True, primary_key=True, serialize=False, verbose_name='ID'
                    ),
                ),
                (
                    'codigo',
                    models.PositiveIntegerField(
                        help_text='Código oficial do tipo de crime (alinhado com o INE/DGPJ).',
                        unique=True,
                        verbose_name='Código N3',
                    ),
                ),
                ('descritivo', models.CharField(max_length=255, verbose_name='Tipo de crime')),
                (
                    'is_active',
                    models.BooleanField(
                        default=True,
                        help_text='Falso para tipos retirados em versões futuras da Tabela.',
                        verbose_name='Activo',
                    ),
                ),
                (
                    'subcategoria',
                    models.ForeignKey(
                        on_delete=django.db.models.deletion.PROTECT,
                        related_name='tipos',
                        to='core.crimesubcategoria',
                        verbose_name='Subcategoria (N2)',
                    ),
                ),
            ],
            options={
                'verbose_name': 'Tipo de crime (N3)',
                'verbose_name_plural': 'Tipos de crime (N3)',
                'ordering': ['codigo'],
            },
        ),
        migrations.AddField(
            model_name='occurrence',
            name='crime_type',
            # Campo obrigatório, sem default: a Tabela de Crimes Registados é
            # semeada antes de existirem ocorrências (greenfield, sem legado).
            field=models.ForeignKey(
                help_text='Classificação na Tabela de Crimes Registados (N3).',
                on_delete=django.db.models.deletion.PROTECT,
                related_name='occurrences',
                to='core.crimetipo',
                verbose_name='Tipo de crime',
            ),
        ),
        migrations.CreateModel(
            name='PrioridadeCrimeTipo',
            fields=[
                (
                    'id',
                    models.BigAutoField(
                        auto_created=True, primary_key=True, serialize=False, verbose_name='ID'
                    ),
                ),
                (
                    'eixo',
                    models.CharField(
                        choices=[
                            ('INVESTIGACAO', 'Investigação prioritária (Art. 5.º)'),
                            ('PREVENCAO', 'Prevenção prioritária (Art. 4.º)'),
                        ],
                        max_length=20,
                    ),
                ),
                (
                    'crime_tipo',
                    models.ForeignKey(
                        on_delete=django.db.models.deletion.PROTECT,
                        related_name='associacoes_prioridade',
                        to='core.crimetipo',
                    ),
                ),
                (
                    'politica',
                    models.ForeignKey(
                        on_delete=django.db.models.deletion.CASCADE,
                        related_name='associacoes',
                        to='core.politicacriminalprioridade',
                    ),
                ),
            ],
            options={
                'verbose_name': 'Associação prioridade↔tipo',
                'verbose_name_plural': 'Associações prioridade↔tipo',
            },
        ),
        migrations.AddField(
            model_name='politicacriminalprioridade',
            name='tipos',
            field=models.ManyToManyField(
                related_name='politicas', through='core.PrioridadeCrimeTipo', to='core.crimetipo'
            ),
        ),
        migrations.AddConstraint(
            model_name='crimesubcategoria',
            constraint=models.UniqueConstraint(
                fields=('categoria', 'codigo'), name='uniq_subcategoria_categoria_codigo'
            ),
        ),
        migrations.AddConstraint(
            model_name='prioridadecrimetipo',
            constraint=models.UniqueConstraint(
                fields=('politica', 'crime_tipo', 'eixo'), name='uniq_politica_tipo_eixo'
            ),
        ),
        migrations.AddConstraint(
            model_name='politicacriminalprioridade',
            constraint=models.UniqueConstraint(
                condition=models.Q(('is_active', True)),
                fields=('is_active',),
                name='uniq_politica_criminal_activa',
            ),
        ),
    ]
