# Generated by Django 6.0.5 on 2026-06-01 00:40

import django.db.models.deletion
import django.utils.timezone
from django.conf import settings
from django.db import migrations, models


class Migration(migrations.Migration):

    dependencies = [
        ('core', '0021_chainofcustody_ledger'),
    ]

    operations = [
        migrations.AddField(
            model_name='user',
            name='clearance',
            field=models.CharField(
                choices=[
                    ('NORMAL', 'Normal (need-to-know)'),
                    ('NACIONAL', 'Nacional (leitura nacional)'),
                ],
                default='NORMAL',
                help_text='Amplitude de visibilidade de leitura. NACIONAL = leitura a nível nacional.',
                max_length=10,
                verbose_name='Credencial',
            ),
        ),
        migrations.AlterField(
            model_name='user',
            name='profile',
            field=models.CharField(
                choices=[
                    ('FIRST_RESPONDER', 'Agente / Primeiro interveniente'),
                    ('FORENSIC_EXPERT', 'Perito forense digital'),
                    ('EVIDENCE_CUSTODIAN', 'Custódio / Fiel depositário'),
                    ('CASE_AUTHORITY', 'Autoridade judiciária (MP)'),
                    ('CHEFE_SERVICO', 'Chefe de serviço (só-leitura)'),
                    ('AUDITOR', 'Auditor (só-leitura)'),
                ],
                default='FIRST_RESPONDER',
                help_text='Papel na cadeia de custódia (ADR-0017).',
                max_length=20,
                verbose_name='Função',
            ),
        ),
        migrations.CreateModel(
            name='Institution',
            fields=[
                (
                    'id',
                    models.BigAutoField(
                        auto_created=True, primary_key=True, serialize=False, verbose_name='ID'
                    ),
                ),
                ('name', models.CharField(max_length=255, verbose_name='Nome')),
                (
                    'type',
                    models.CharField(
                        choices=[
                            ('OPC', 'Órgão de polícia criminal'),
                            ('LAB_PUBLICO', 'Laboratório público'),
                            ('LAB_PRIVADO', 'Laboratório privado'),
                            ('TRIBUNAL', 'Tribunal'),
                            ('MP', 'Ministério Público'),
                            ('DEPOSITARIO', 'Depositário'),
                        ],
                        max_length=20,
                        verbose_name='Tipo',
                    ),
                ),
                (
                    'sigla',
                    models.CharField(blank=True, default='', max_length=20, verbose_name='Sigla'),
                ),
                ('is_active', models.BooleanField(default=True, verbose_name='Ativa')),
            ],
            options={
                'verbose_name': 'Instituição',
                'verbose_name_plural': 'Instituições',
                'ordering': ['name'],
                'constraints': [
                    models.UniqueConstraint(
                        fields=('name', 'type'), name='uniq_institution_name_type'
                    )
                ],
            },
        ),
        migrations.CreateModel(
            name='InstitutionMembership',
            fields=[
                (
                    'id',
                    models.BigAutoField(
                        auto_created=True, primary_key=True, serialize=False, verbose_name='ID'
                    ),
                ),
                ('is_active', models.BooleanField(default=True, verbose_name='Ativa')),
                (
                    'joined_at',
                    models.DateTimeField(
                        default=django.utils.timezone.now, verbose_name='Membro desde'
                    ),
                ),
                (
                    'institution',
                    models.ForeignKey(
                        on_delete=django.db.models.deletion.PROTECT,
                        related_name='memberships',
                        to='core.institution',
                        verbose_name='Instituição',
                    ),
                ),
                (
                    'user',
                    models.ForeignKey(
                        on_delete=django.db.models.deletion.CASCADE,
                        related_name='institution_memberships',
                        to=settings.AUTH_USER_MODEL,
                        verbose_name='Utilizador',
                    ),
                ),
            ],
            options={
                'verbose_name': 'Pertença a instituição',
                'verbose_name_plural': 'Pertenças a instituições',
                'ordering': ['institution', 'user'],
                'constraints': [
                    models.UniqueConstraint(
                        fields=('user', 'institution'), name='uniq_membership_user_institution'
                    )
                ],
            },
        ),
    ]
